--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body class="body">
-    <a href="Home.html" class="logo">OnlyTik</a>
+    <a href="index.html" class="logo">OnlyTik</a>
     <input class="sb" type="search" placeholder="what do you want to search?"><button type="reset" class="sbb" >Search</button>
     <a href="login.html"><button class="login">Login</button></a>
     <hr color="white">
